src/pages/catchup.css
/* ... */
.catchup-form {
  display: inline-flex;
  align-items: center;
  gap: 16px;
  padding: 16px 16px;
  background-color: var(--link-bg-color);
  border-radius: 32px;
  flex-wrap: wrap;

  * {
    flex-grow: 1;
  }

  input[type='range'] {
    accent-color: var(--link-color);
    direction: rtl;
  }
}

.catchup-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 16px;
  gap: 8px;

  aside {
    display: flex;
    align-items: center;
    gap: 8px;
    font-size: 90%;

    button[hidden] {
      display: inline;
      opacity: 0;
      pointer-events: none;
    }
  }
}

.catchup-posts-viz-bar {
  margin: 0 16px;
  border-radius: 3px;
  border: 1px solid var(--bg-color);
  display: flex;
  gap: 1px;
  pointer-events: none;
  justify-content: stretch;
  height: 3px;

  &:has(.post-dot:nth-child(320)) {
    gap: 0;
  }

  .post-dot {
    display: block;
    width: 100%;
    height: 3px;
    border-radius: 3px;
    opacity: 0.5;
    background-color: var(--link-color);
    transition: 0.25s ease-in-out;
    transition-property: opacity, transform;

    &.post-dot-highlight {
      opacity: 1;
    }
  }

  &:has(.post-dot:not(.post-dot-highlight)) .post-dot-highlight {
    /* transform: scaleY(2); */
    transform: scale3d(1, 2, 1);
  }
}

.catchup-filters {
  padding: 8px 16px;
  display: flex;
  /* flex-wrap: wrap; */
  gap: 8px;
  align-items: center;
  overflow-x: auto;
  overflow-y: hidden;
  max-width: 100%;
  mask-image: linear-gradient(
    to right,
    transparent,
    black 16px calc(100% - 16px),
    transparent
  );
  padding-inline-end: 25%;

  .filter-label {
    text-transform: uppercase;
    font-size: 12px;
    font-weight: 500;
    color: var(--text-insignificant-color);
  }

  label {
    font-size: 80%;
    white-space: nowrap;
    cursor: pointer;
    user-select: none;
    color: var(--text-insignificant-color);
    position: relative;

    select {
      /* appearance: none;
      background-color: var(--bg-faded-color);
      color: var(--link-color);
      border: 0;
      border-radius: 12px; */
      padding: 4px;
      margin: 0;
    }

    input[type] {
      left: 0;
      position: absolute;
      opacity: 0;
      pointer-events: none;
    }

    &.filter-cat {
      padding: 8px 12px;
      background-color: var(--bg-blur-color);
      border-radius: 24px;
      display: inline-block;
      display: flex;
      align-items: center;
      gap: 4px;

      &:is(:hover, :focus) {
        background-color: var(--link-bg-color);
      }

      &:has(:checked) {
        color: var(--link-color);
        background-color: var(--link-bg-color);
        box-shadow: inset 0 0 0 2px var(--link-color);
      }

      .count {
        font-size: 70%;
        margin-left: 4px;
        background-color: var(--bg-color);
        padding: 4px 6px;
        border-radius: 12px;
        display: inline-block;
      }
    }

    &.filter-author {
      flex-direction: column;
      padding: 0;
      background-color: transparent;
      position: relative;
      width: 50px;
      /* transition: filter 0.15s ease; */

      .avatar {
        margin-bottom: 2px;
        /* transition: box-shadow 0.15s ease; */
      }

      &:is(:hover, :focus) {
        filter: none;

        .avatar {
          box-shadow: 0 0 0 0.5px var(--bg-color),
            0 0 0 3px var(--link-faded-color) !important;

          img {
            filter: none;
          }
        }

        .count {
          color: var(--text-color);
        }
      }

      .avatar {
        &.has-alpha {
          border-radius: 2px;
        }

        img {
          transition: filter 0.15s ease;
        }
      }

      &:has(:checked) {
        box-shadow: none;
        filter: none;

        .avatar {
          box-shadow: 0 0 0 1px var(--bg-color), 0 0 0 3px var(--link-color);
        }

        .username {
          color: var(--link-color);
          font-weight: 500;
        }

        .count {
          color: var(--link-color);
          border-color: var(--link-color);
          box-shadow: 0 0 0 1px var(--link-color);
        }
      }

      .count {
        position: absolute;
        right: -4px;
        top: -4px;
        font-size: 10px;
        background-color: var(--bg-color);
        border-radius: 12px;
        display: inline-block;
        border: 1px solid var(--link-faded-color);
        padding: 0 2px;
        min-width: 16px;
        min-height: 16px;
        text-align: center;
        line-height: 14px;
      }

      .username {
        display: block;
        width: 100%;
        overflow: hidden;
        text-align: center;
        mask-image: linear-gradient(
          to right,
          black calc(100% - 0.5em),
          transparent 100%
        );
      }
    }
  }

  &:has(.filter-author :checked)
    .filter-author:not(:has(:checked)):not(:is(:hover, :focus)) {
    .avatar img {
      filter: grayscale(1) contrast(2) opacity(0.5);
    }
  }

  .radio-field-group {
    display: flex;
    border: 0;
    padding: 0;
    margin: 0;
    border-radius: 4px;
    overflow: hidden;
    gap: 1px;

    label {
      padding: 4px 8px;
      line-height: 2em;
      min-width: 32px;
      text-align: center;
      background-color: var(--bg-blur-color);
      margin: 0;
      cursor: pointer;

      &:is(:hover, :focus) {
        background-color: var(--link-bg-color);
      }

      &:has(:checked) {
        font-weight: 500;
        color: var(--text-color);
        background-color: var(--link-bg-color);
        box-shadow: inset 0 -2px 0 var(--link-color);
      }

      &:has(:disabled) {
        opacity: 0.5;
        cursor: not-allowed;
      }
    }
  }
}
/* ... */

